// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.dubbo";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package protobuf;

// The greeting service definition.
service Dubbo3Greeter {
  // Sends a greeting
  rpc Dubbo3SayHello (stream Dubbo3HelloRequest) returns (stream Dubbo3HelloReply) {}
  rpc Dubbo3SayHello2 ( Dubbo3HelloRequest) returns ( Dubbo3HelloReply) {}
  rpc BigStreamTest (stream BigData) returns ( stream BigData){}
  rpc BigUnaryTest (BigData) returns (BigData){}
}

// The request message containing the user's name.
message Dubbo3HelloRequest {
  string myname = 1;
}

// The response message containing the greetings
message Dubbo3HelloReply {
  string msg = 1;
}

message BigData {
  bytes data = 1;
  int32 wantSize = 2;
}